--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -12,14 +12,14 @@ last-updated: 2024-07-16 10:12 AM
   <div class="flip-box">
     <div class="flip-box-inner">
       <div class="flip-box-front">
-        <img src="/assets/img/avatar/me.jpg" alt="Reems" class="img-contact"/>
+        <img src="/assets/img/avatar/me.jpg" alt="{{ site.author }}" class="img-contact"/>
       </div>
       <div class="flip-box-back">
-        <img src="/assets/img/avatar/learner.jpg" alt="Reems" class="img-contact"/>
+        <img src="/assets/img/avatar/learner.jpg" alt="{{ site.author }}" class="img-contact"/>
       </div>
     </div>
   </div>
-  <h4 style="margin-top:1em;">{{ site.author }}</h4>
+  <h4 style="margin-top:1em; font-family: Courgette;">{{ site.author }}</h4>
   <!--<p>PM</p> -->
 </div>
 <!-- Introduction or About Me Section -->
