--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -31,7 +31,7 @@
     <!--
     <ul class="navbar-nav  justify-content-end">
       <li class="nav-item">
-        {% include social.html %}
+       //% include social.html %
       </li>
     </ul>
     -->
