--- a/_layouts/education.html
+++ b/_layouts/education.html
@@ -7,6 +7,8 @@ title: education
 {% assign theme = site.data.themes[site.ui_theme] %}
 <html lang="{{ site.lang }}">
   {% include head.html %}
+  <!-- Remove below line later to enable crawling -->
+  <a href="https://reemstk.github.io/education.html" rel="nofollow"></a>
   {% include nav.html %}
   <body style="background-color:{{theme.background-color}}; color: {{theme.font-color}};">
     <!-- education starts -->
