--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,7 +5,7 @@
   >
   <a class="navbar-brand" href="/index.html">
     <h4 style="font-family:{{ theme.title-font }};font-weight:600;color:{{ theme.nav-text}};">
-      {{ site.title }}
+      {{ site.author_short }}
     </h4>
   </a>
   <button 
