--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,7 @@
 <meta name="description" content="{{site.description}}" />
 <meta name="author" content="{{site.author}}" />
 <meta name="keywords" content="{{site.keywords}}" />
+<meta name="google-site-verification" content="qxPjPCd2_R_gZDsiAh-HNUGn9v1uSJKCcEIpEKJ6gT8" />
 <!-- copied-->
 <link
   rel="canonical"
@@ -29,7 +30,7 @@
   -->
 <!-- Short description of the document (limit to 150 characters) -->
 <!-- This content *may* be used as a part of search engine results. -->
-<meta name="description" content="{{ site.description }}">
+<!-- <meta name="description" content="{{ site.description }}"> -->
 <!-- Control the behavior of search engine crawling and indexing -->
 <meta name="robots" content="index,follow">
 <!-- All Search Engines -->
