--- a/_includes/head.html
+++ b/_includes/head.html
@@ -59,20 +59,25 @@
 <!-- meta name="geo.position" content="latitude;longitude"-->
 <!-- meta name="geo.region" content="country[-state]"><Country code (ISO 3166-1): mandatory, state code (ISO 3166-2): optional; eg. content="US" / content="US-NY" -->
 <!-- meta name="geo.placename" content="city/town"><eg. content="New York City" -->
+
 <!-- Link to an external CSS file -->
 <link href="https://fonts.googleapis.com/css2?family=Parisienne&family=Courgette&family=Lobster&family=Pacifico&family=Yellowtail&family=Noto+Sans+JP:wght@400;900&family=Poppins:wght@500&family=Righteous&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="/css/main.css">
+
 <!-- BootStrap CDN --> 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 <script src="https://kit.fontawesome.com/{{ site.font_awesome_id }}.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script> 
+
 <!--  GIT TALK CDN  for comment system -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
 <script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script> 
+
 <!-- Provides information about an author or another person -->
 <link rel="me" href="mailto:{{ site.email }}">
 <link rel="me" href="sms:+{{ site.phonenumber }}">
+
 <!-- Open Search -->
 <!-- link rel="search" href="/open-search.xml" type="application/opensearchdescription+xml" title="Search Title" -->
 <!-- Feeds -->
@@ -87,7 +92,7 @@
 <meta property="fb:app_id" content="{{ site.fbappid }}">
 <meta property="og:url" content="{{ site.url }}">
 <meta property="og:type" content="website">
-<meta property="og:title" content="{{ site.title}}, {{ site.description }}">
+<meta property="og:title" content="{{ site.title}}">
 <meta property="og:image" content="{{ site.image }}">
 <meta property="og:image:alt" content="{{ site.image_alt }}">
 <meta property="og:description" content="{{ site.description }}">
