--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,21 +4,21 @@
   initial-scale=1.0, 
   maximum-scale=1.0, 
   minimum-scale=1.0, 
-  user-scalable=no" />
+  user-scalable=no">
 <!--
   The above 2 meta tags *must* come first in the <head>
   to consistently ensure proper document rendering.
   Any other head element should come *after* these tags.
   -->
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta name="description" content="{{site.description}}" />
-<meta name="author" content="{{site.author}}" />
-<meta name="keywords" content="{{site.keywords}}" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" >
+<meta name="description" content="{{site.description}}" >
+<meta name="author" content="{{site.author}}" >
+<meta name="keywords" content="{{site.keywords}}" >
 <!-- copied-->
 <link
   rel="canonical"
   href="{{page.url | replace:'index.html','' | prepend: site.url}}"
-  />
+  >
 <title>{{site.title}}{% if page.title %} | {{page.title}}{% endif %}</title>
 <!-- Set the base URL for all relative URLs within the document -->
 <base href="{{ site.url }}">
@@ -66,7 +66,7 @@
 
 <!-- BootStrap CDN --> 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 <script src="https://kit.fontawesome.com/{{ site.font_awesome_id }}.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script> 
 
