--- a/_includes/head.html
+++ b/_includes/head.html
@@ -53,7 +53,7 @@
 <!-- Disable automatic detection and formatting of possible phone numbers -->
 <meta name="format-detection" content="telephone={{ site.detectphone }}">
 <!-- Completely opt out of DNS prefetching by setting to "off" -->
-<meta http-equiv="x-dns-prefetch-control" content="on">
+<!-- <meta http-equiv="x-dns-prefetch-control" content="on"> -->
 <!-- Geo tags -->
 <!-- meta name="ICBM" content="latitude, longitude"-->
 <!-- meta name="geo.position" content="latitude;longitude"-->
