Update default.html | loop: {{ site..loop }}, -> loop: {{ site.loop }},
loop: {{ site.loop }},

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,7 @@
     typeSpeed: {{ site.type-speed }},
     backDelay: {{ site.delete-delay }},
     startDelay: {{ site.start-delay }},
-    loop: {{ site..loop }},
+    loop: {{ site.loop }},
     loopCount: {{ site.loop-count }},
     cursorChar: "|"
   });
