--- a/_includes/head.html
+++ b/_includes/head.html
@@ -123,14 +123,23 @@
           $(".toast").toast('show');
       });
   </script> -->
-<!-- Global site tag (gtag.js) - Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics
 <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google-tag }}"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  
+  gtag('js', new Date());  
 </script>
+
+<!-- MS clarity tracking -->
+<script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "nks4z3y13w");
+</script>
+<!-- end of MS Clarity -->
 <noscript>
   <!-- No JS alternative -->
 </noscript>
