--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,7 @@
 <meta name="description" content="{{site.description}}" >
 <meta name="author" content="{{site.author}}" >
 <meta name="keywords" content="{{site.keywords}}" >
+<meta http-equiv='content-language' content='en-gb'>
 <!-- copied-->
 <link
   rel="canonical"
