--- a/_includes/timeline-intro.html
+++ b/_includes/timeline-intro.html
@@ -15,7 +15,7 @@
       <img
         class="img-circle img-responsive"
         src="{{site.baseurl}}{{ event.image }}"
-        alt=""
+        alt="..."
         />
     </div>
     <div class="timeline-panel">
